[project]
name = "jaxgmg"
version = "0.0.0"
authors = [
    { name="Matthew Farrugia-Roberts", email="matthew@far.in.net" },
]
description = "JAX-based environments and RL baselines for studying goal misgeneralisation."
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

requires-python = ">=3.10"
dependencies = [
    "jax",
    "imageio",
    "numpy",
    "einops",
    "chex",
    "flax",
    "readchar",
    "typer",
]

[project.scripts]
jaxgmg = "jaxgmg.cli.app:app"

[project.urls]
Homepage = "https://github.com/matomatical/jaxgmg"
Issues = "https://github.com/matomatical/jaxgmg/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jaxgmg"]

